--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
     --resources-portfolio-color: #F5F4FA;
     --benefit-capabilities-color: rgba(47, 48, 58, 0.8);
     --border-partners-company-color: #AFB1B8;
+    --line-developers-color: rgba(255, 255, 255, 0.1);
+    --header-line-color: #ECECEC;
 }
 
 body{
@@ -185,17 +187,16 @@ h2, .advantages{
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
-    display: inline-block;
-    margin-top: 94px;
+    padding-top: 94px;
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .benefit img{
     margin-top: 50px;
     margin-bottom: 0px;
-    display: inline-block;
 }
 
 .benefit .capabilities{
@@ -220,6 +221,7 @@ h2, .advantages{
 }
 
 .team{
+    margin-top: 94px;
     background-color: var(--resources-portfolio-color);
 }
 
@@ -248,6 +250,7 @@ h2, .advantages{
 
 .social-links > li{
     margin-bottom: 36px;
+    padding-bottom: 130px;
 }
 
 /* Наша команда в соц.сетях */
@@ -291,6 +294,11 @@ h2, .advantages{
     background-color: var(--link-color);
 }
 
+.container-footer{
+    margin-top: 94px;
+    margin-bottom: 0px;
+}
+
 .first-name-logo,
 .last-name-logo{
     color: var(--link-color);
@@ -298,6 +306,9 @@ h2, .advantages{
     font-weight: 700;
     font-size: 22px;
     line-height: 1.18;
+    display: inline-block;
+    margin-top: 21px;
+    margin-bottom: 0px;
 }
 
 .last-name-logo{
@@ -309,6 +320,13 @@ h2, .advantages{
     font-size: 14px;
     line-height: 1.71;
     font-style: normal;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+.contacts > ul{
+    padding: 0;
+    margin: 0;
 }
 
 .contacts a{
@@ -316,6 +334,9 @@ h2, .advantages{
     font-size: 14px;
     line-height: 1.71;
     font-style: normal;
+    display: inline-block;
+    margin-top: 9px;
+    margin-bottom: 0px;
 }
 
 .join{
@@ -324,6 +345,16 @@ h2, .advantages{
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    margin-top: 56px;
+    margin-bottom: 0px;
+}
+
+.line{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    outline: 1px solid var(--line-developers-color);
 }
 
 .developers{
@@ -331,6 +362,7 @@ h2, .advantages{
     font-size: 12px;
     line-height: 2;
     text-align: center;
+    margin: 18px;
 }
 
 .resources button{
@@ -342,37 +374,75 @@ h2, .advantages{
     text-align: center;
     letter-spacing: 0.03em;
     border: 0px;
+    min-width: 73px;
+    padding: 6px 22px;
 }
 
 .resources button:hover,
 .resources button:focus{
     color: var(--third-text-color);
 }
+
+.portfolio{
+    padding: 0;
+    margin: 0;
+}
+
+.portfolio .first-img{
+    margin-top: 23.33px;
+    margin-bottom: 0px;
+}
+
+.portfolio img{
+    margin-top: 50px;
+    margin-bottom: 0px;
+}
+
 .portfolio h2{
     color: var(--primary-text-color);
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 .portfolio .text{
     color: var(--third-text-color);
     font-size: 18px;
     line-height: 1.56;
+    padding: 0;
+    margin: 0;
 }
 
 .portfolio .product{
     color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 1.86;
+    text-align: center;
+    margin-top: 4px;
+    margin-bottom: 0px;
 }
 
 footer{
-    background-color: #2F303A;;
+    background-color: #2F303A;
+    padding-bottom: 21px;
 }
 
 footer .join-photo:hover,
 footer .join-photo:focus{
     background-color: var(--link-color);
+}
+
+.header-line{
+    display: inline-block;
+    border: 1px solid var(--header-line-color);
+    margin-top: 33px;
+}
+
+.hidden{
+    padding: 0;
+    margin: 0;
+    text-align: center;
 }
