--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ li {
 /* Логотип */
 span.first-name,
 span.last-name{
-    display: flexbox;
     color: var(--link-color);
     font-family: Raleway, sans-serif;
     font-weight: 700;
@@ -121,7 +120,7 @@ span.last-name{
 }
 
 .nav-contacts .item + .item{
-    display: flexbox;
+    display: flex;
     margin-left: 30px;
     align-items: center;
 }
@@ -316,7 +315,7 @@ h2, .advantages{
 
 .social-links{
     display: flex;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
 
 .social-links img:hover,
@@ -367,6 +366,18 @@ h2, .advantages{
 }
 
 /* portfolio */
+.resources{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
+}
+
+button{
+    margin-right: 8px;
+}
+
 .resources button{
     font-family: Roboto;
     font-style: normal;
@@ -385,13 +396,25 @@ h2, .advantages{
     color: var(--third-text-color);
 }
 
+.works{
+    padding-bottom: 114px;
+}
+
 .portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding: 0;
     margin: 0;
 }
 
-.portfolio .first-img{
-    margin-top: 23.33px;
+.portfolio-elements, .portfolio-elements > img{
+    display: block;
+} 
+
+.portfolio{
+    /* margin-top: 50px; */
+    margin-top: 23px;
     margin-bottom: 0px;
 }
 
@@ -406,25 +429,31 @@ h2, .advantages{
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    text-align: left;
     margin-top: 20px;
     margin-bottom: 0px;
+    padding-left: 24px;
 }
 
 .portfolio .text{
     color: var(--third-text-color);
+    text-align: left;
+    width: 332px;
     font-size: 18px;
     line-height: 1.56;
     padding: 0;
     margin: 0;
+    padding-left: 24px;
 }
 
 .portfolio .product{
     color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 1.86;
-    text-align: center;
+    text-align: left;
     margin-top: 4px;
     margin-bottom: 0px;
+    padding-left: 24px;
 }
 
 .hidden{
@@ -453,15 +482,19 @@ footer{
     margin-bottom: 0px;
 }
 
+.footer-logo{
+    display: block;
+    /* margin-top: 48px; */
+    margin-top: 21px;
+}
+
 .first-name-logo,
 .last-name-logo{
-    display: flexbox;
     color: var(--link-color);
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 22px;
     line-height: 1.18;
-    margin-top: 21px;
     margin-bottom: 0px;
 }
 
@@ -490,14 +523,17 @@ footer{
 }
 
 .join{
-    margin-top: 56px;
+    /* margin-top: 56px; */
+    margin-top: 29px; 
     margin-bottom: 0px;
+    margin-left: 179px;
 
     color: var(--third-text-color);
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    text-align: left;
 }
 
 .line{
@@ -515,6 +551,7 @@ footer{
     line-height: 2;
     text-align: center;
     margin-top: 18px;
+    margin-bottom: 0;
 }
 
 .join-photo{
@@ -534,12 +571,20 @@ footer .join-photo:focus{
 } */
 
 .social-links-footer{
+    display: flex;
     margin: 0;
+    margin-left: 179px;
     padding: 0;
 }
 
+.social-logo{
+    margin-right: 10px;
+}
 
+.social-logo:last-child {
+    margin-right: 0;
+  }
 
-.join-link{
-    display: block;
+.join-photo{
+    background-color: var(--line-developers-color);
 }
