--- a/css/style.css
+++ b/css/style.css
@@ -408,13 +408,23 @@ button{
 .portfolio{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding: 0;
     margin: 0;
+}
+.portfolio-links{
+    width: calc((100% - 30px * 2) / 3);
+    margin-right: 30px;
+}
+
+.portfolio-links:nth-child(3n){
+    margin-right: 0px;
 }
 
 .portfolio-elements, .portfolio-elements > img{
     display: block;
+    
+    margin-right: 0px;
 } 
 
 .portfolio{
