--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     --header-line-color: #ECECEC;
 }
 
-html {
+/* html {
 	box-sizing: border-box;
 }
 
@@ -33,7 +33,7 @@ html {
 *::before,
 *::after {
 	box-sizing: inherit;
-}
+} */
 
 body{
     color: var(--primary-text-color);
@@ -44,6 +44,12 @@ body{
     font-weight: 400;
 }
 
+img{​  
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 /*.title-section,*/ .team ul, .team .title, .team p, .logo, .join, .contacts > p{
     padding: 0;
     margin: 0;
@@ -52,7 +58,7 @@ body{
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1230px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     /* outline: 2px solid tomato; */
@@ -67,7 +73,7 @@ li {
 
 /* Логотип */
 .nav-logo{
-    margin-right: 86px;
+    margin-right: 85px;
 }
 
 span.first-name,
@@ -207,6 +213,7 @@ header{
     margin: 0;
     display: flex;
     padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .advantages-element, .benefit-item{
@@ -228,13 +235,22 @@ h2, .advantages{
     margin-bottom: 30px;
     background-color: var(--resources-portfolio-color);
     border-radius: 4px;
-    max-width: 278px;
-    padding: 25px 106.34px;
+    max-width: 270px;
+    height: 120px;
+    /* padding: 25px 106.34px; */
 }
 
 .advantages img:hover,
 .advantages img:focus{
     background-color: var(--link-color);
+}
+
+.satellite-dish{
+    padding: 25px 102.34px;
+}
+
+.clock, .computer, .cosmonaut{
+    padding: 25px 100px;
 }
 
 .advantages-title{
@@ -249,7 +265,7 @@ h2, .advantages{
 .advantages-description{
     margin: 0;
     color: var(--secondary-text-color);
-    width: 278px;
+    max-width: 270px;
     font-size: 14px;
     line-height: 1.7;
     margin-bottom: 0px;
@@ -287,6 +303,7 @@ h2, .advantages{
 .employment-section{
     padding-top: 94px;
     padding-bottom: 94px;
+    border-top: 1px solid var(--header-line-color);
     /* margin-bottom: 94px; */
 }
 
@@ -294,11 +311,13 @@ h2, .advantages{
     display: block;
     margin-bottom: 0px;
     /* min-width: auto; */
+    border-radius: 4px;
+    height: 294px;
 }
 
 .benefit-item .capabilities{
     display: block;
-    padding: 27px 82px;
+    padding: 27px 80px;
     
     color: var(--third-text-color);
     font-weight: 700;
@@ -339,11 +358,12 @@ h2, .advantages{
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     padding-bottom: 24px;
-    max-width: 270px;
 }
 
 .team-flex-photo{
     margin-bottom: 30px;
+    display: block;
+    height: 260px;
 }
 
 .team-flex .title{
@@ -391,7 +411,7 @@ h2, .advantages{
 /* Постоятнные клиенты */
 .employment-partners{
     padding-top: 94px;
-    margin-bottom: 94px;
+    padding-bottom: 94px;
 }
 
 .partners, .partners a{
@@ -408,7 +428,7 @@ h2, .advantages{
 .partners img{
     border: 1px solid var(--border-partners-company-color);
     border-radius: 4px;
-    min-width: 175px;
+    max-width: 170px;
     /* margin-top: 50px;
     margin-bottom: 94px; */
 }
@@ -418,27 +438,27 @@ h2, .advantages{
 }
 
 .partners .yaco{
-    padding: 21px 65px;
+    padding: 20px 62.73px 20.77px 63px;
     display: block;
 }
 .partners .tagline{
-    padding: 19px 68px;
+    padding: 19px 65px;
     display: block;
 }
 .partners .company{
-    padding: 24px 71px 24.73px 63px;
+    padding: 24px 64px 23.4px 65px;
     display: block;
 }
 .partners .foster{
-    padding: 25px 46px 24.28px 47px;
+    padding: 24px 45px;
     display: block;
 }
 .partners .brand{
-    padding: 22px 58px;
+    padding: 22px 55px 21px 56px;
     display: block;
 }
 .partners .tag-line{
-    padding: 23px 43px;
+    padding: 22px 40.52px 22.56px 41px;
     display: block;
 }
 
@@ -448,39 +468,49 @@ h2, .advantages{
 }
 
 /* portfolio */
-.resources{
+.filtres{
+    padding-top: 93px;
+    padding-bottom: 50px;
+}
+
+.filtres-resources{
     display: flex;
     justify-content: center;
     margin: 0;
     padding: 0;
-    margin-top: 93px;
 }
 
-button{
+.filtres-resources-button{
     margin-right: 8px;
 }
 
-.resources button{
-    font-family: Roboto;
-    font-style: normal;
+.filtres-resources-button:last-child{
+    margin-right: 0px;
+}
+
+.filtres-resources button{
+    padding: 6px 22px;
+
+    /* font-family: Roboto; 
+    font-style: normal;  */
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
     text-align: center;
-    letter-spacing: 0.03em;
     border: 0px;
     min-width: 73px;
-    padding: 6px 22px;
 }
 
-.resources button:hover,
-.resources button:focus{
+.filtres-resources button:hover,
+.filtres-resources button:focus{
     color: var(--third-text-color);
 }
 
 .works{
-    padding-top: 50px;
-    padding-bottom: 114px;
+    /* padding: 0;
+    margin: 0; */
+    /* padding-top: 50px; */
+    padding-bottom: 94px;
 }
 
 .portfolio{
@@ -490,14 +520,26 @@ button{
     padding: 0;
     margin: 0;
 }
+
 .portfolio-links{
     width: calc((100% - 30px * 2) / 3);
     margin-right: 30px;
-    margin-top: 50px;
+    margin-top: 30px;
+    /* margin-top: 50px; */
 }
 
 .portfolio-links:nth-child(3n){
     margin-right: 0px;
+}
+
+.portfolio-links:nth-child(-n + 3){
+    margin-top: 0px;
+}
+
+.portfolio-elements{
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    overflow: hidden;
 }
 
 .portfolio-elements, .portfolio-elements > img{
@@ -507,18 +549,14 @@ button{
 
 .portfolio img{
     margin-bottom: 0px;
+    height: 294px;
 }
 
-.portfolio h2{
-    color: var(--primary-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    text-align: left;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    padding-left: 24px;
+.portfolio-card{     
+    border: 1px solid #EEEEEE;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding: 20px 24px;
 }
 
 .portfolio .text{
@@ -530,17 +568,26 @@ button{
     line-height: 1.56;
     padding: 0;
     margin: 0;
-    padding-left: 24px;
 }
 
-.portfolio .product{
+.portfolio-card h2{
+    color: var(--primary-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+.portfolio-card .product{
     color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 1.86;
     text-align: left;
     margin-top: 4px;
     margin-bottom: 0px;
-    padding-left: 24px;
 }
 
 .hidden{
@@ -558,10 +605,15 @@ button{
 
 .footer-flex{
     display: flex;
+    align-items: baseline;
 }
 
 .footer-flex-block{
     margin-top: 48px;
+}
+
+.network{
+    margin-left: 69px;
 }
 
 footer{
@@ -618,9 +670,9 @@ footer{
 }
 
 .join{
-    padding-top: 8px;
+    /* padding-top: 8px; */
     margin-bottom: 0px;
-    margin-left: 179px;
+
 
     color: var(--third-text-color);
     font-weight: 700;
@@ -630,15 +682,6 @@ footer{
     text-align: left;
 }
 
-.line{
-    display: inline-block;
-    margin-top: 28px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 1200px;
-    outline: 1px solid var(--line-developers-color);
-}
-
 .developers{
     color: var(--developers-color);
     font-size: 12px;
@@ -646,12 +689,13 @@ footer{
     text-align: center;
     margin-top: 18px;
     margin-bottom: 0;
+    padding-top: 18px;
+    border-top: 1px solid var(--line-developers-color);
 }
 
 .join-photo{
     display: block;
     padding: 12px;
-    margin-top: 21px;
     background-color: var(--line-developers-color);
 }
 
@@ -670,7 +714,7 @@ footer .join-photo:focus{
     display: flex;
     margin: 0;
     padding: 0;
-    margin-left: 179px;
+    margin-top: 21px;
 }
 
 .social-logo{
