--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,17 @@ img{​
     height: auto;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
 /*.title-section,*/ .team ul, .team .title, .team p, .logo, .join, .contacts > p{
     padding: 0;
     margin: 0;
